# helper-repo

./: README.md
boost-statechart-test/: CMakeLists.txt  statechart_eg1.cpp  statechart_eg3.cpp
cmake-best-practice-test/example-executable/: CMakeLists.txt  main.cpp
cmake-best-practice-test/example-static-library/: CMakeLists.txt
cmake-best-practice-test/example-static-library/cmake/: Config.cmake.in
cmake-best-practice-test/example-static-library/inc/: Foo.h
cmake-best-practice-test/example-static-library/src/: Bar.cpp  Bar.h  Foo.cpp
cmake-best-practice-test/in-seperate-buildsystems/math-types/: CMakeLists.txt
cmake-best-practice-test/in-seperate-buildsystems/math-types/test/unit/: CMakeLists.txt
cmake-best-practice-test/in-seperate-subsystem/math-functions/cmake/: Config.cmake.in
cmake-best-practice-test/in-seperate-subsystem/math-functions/development/include/: MathFunctions.h
cmake-best-practice-test/in-seperate-subsystem/math-functions/test/integration/: CMakeLists.txt  integration_dummy_test.cpp
cmake-best-practice-test/in-seperate-subsystem/math-functions/test/unit/: unit_dummy_test.cpp
cmake-best-practice-test/in-seperate-subsystem/math-types/cmake/: Dependencies.cmake
cmake-best-practice-test/in-seperate-subsystem/math-types/development/: CMakeLists.txt
cmake-best-practice-test/math-functions/: CMakeLists.txt
cmake-best-practice-test/math-functions/cmake/: Config.cmake.in
cmake-best-practice-test/math-functions/src/: MathFunctions.cpp
cmake-best-practice-test/math-types/: CMakeLists.txt
cmake-best-practice-test/math-types/cmake/: Config.cmake.in
cmake-best-practice-test/math-types/inc/: Types.h
cmake-best-practice-test/math-types/src/: Types.cpp
conan-test/creating-packages/: requirements.txt
conan-test/creating-packages/test_package/: CMakeUserPresets.json
conan-test/simple-zlib-project/: .gitignore
setup-cpp-conan-cmake/math-app/: CMakeLists.txt  conan_test.bat  conanfile.py
setup-cpp-conan-cmake/math-app/cmake/: Config.cmake.in  Dependencies.cmake
setup-cpp-conan-cmake/math-app/development/: CMakeLists.txt
setup-cpp-conan-cmake/math-app/development/src/: MathApp.cpp
setup-cpp-conan-cmake/math-app/test/package/: CMakeLists.txt  conanfile.py
setup-cpp-conan-cmake/math-functions/: CMakeLists.txt  conanfile.py
setup-cpp-conan-cmake/math-functions/cmake/: Config.cmake.in  Dependencies.cmake
setup-cpp-conan-cmake/math-functions/development/: CMakeLists.txt
setup-cpp-conan-cmake/math-functions/development/include/calculations/: AngleCalculator.h  DistanceCalculator.h
setup-cpp-conan-cmake/math-functions/development/include/conversions/: CoordinateConversion.h  TimeConversion.h
setup-cpp-conan-cmake/math-functions/development/include/transformations/: CoordinateTransform.h
setup-cpp-conan-cmake/math-functions/development/src/calculations/: AngleCalculator.cpp  DistanceCalculator.cpp
setup-cpp-conan-cmake/math-functions/development/src/conversions/: CoordinateConversion.cpp  TimeConversion.cpp
setup-cpp-conan-cmake/math-functions/development/src/transformations/: CoordinateTransform.cpp
setup-cpp-conan-cmake/math-functions/test/package/: CMakeLists.txt  MathFunctionsPackageTest.cpp  conanfile.py
setup-cpp-conan-cmake/math-types/: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.py
setup-cpp-conan-cmake/math-types/cmake/: CodeCoverage.cmake  Config.cmake.in  Dependencies.cmake
setup-cpp-conan-cmake/math-types/cmake/scripts/: script_cmake_debug.bat  script_cmake_release.bat  script_conan_debug.bat  script_conan_release.bat
setup-cpp-conan-cmake/math-types/development/: CMakeLists.txt
setup-cpp-conan-cmake/math-types/development/include/algebra/: Matrix3x3.h  Position3D.h  Quaternion.h  Vector3D.h
setup-cpp-conan-cmake/math-types/development/include/coordinates/: ECEF.h  ENU.h  Geodetic.h
setup-cpp-conan-cmake/math-types/development/src/algebra/: Matrix3x3.cpp  Position3D.cpp  Quarternion.cpp  Vector3D.cpp
setup-cpp-conan-cmake/math-types/development/src/coordinates/: ECEF.cpp  ENU.cpp  Geodetic.cpp
setup-cpp-conan-cmake/math-types/test/package/: CMakeLists.txt
setup-cpp-conan-cmake/math-types/test/unit/: CMakeLists.txt
setup-cpp-conan-cmake/math-types/tests/: CMakeLists.txt
setup-cpp-conan-cmake/math-types/tests/integration/: CMakeLists.txt
setup-cpp-conan-cmake/math-types/tests/package/: conanfile.py
setup-cpp-conan-cmake/math-types/tests/unit/: CMakeLists.txt
setup-cpp-conan-cmake/math-types/tests/unit/algebra/: QuarternionUnitTests.cpp
setup-cpp-conan-cmake/math-types/tests/unit/coordinates/: ECEFUnitTests.cpp  ENUUnitTests.cpp
setup-cpp-dev/: .clang-format  README.md  c_cpp_properties.json  extensions.json  settings.json
test-boost-statechart/: CMakeLists.txt  statechart_eg2.cpp
test-cmake-best-practice/in-seperate-buildsystems/example-executable/: CMakeLists.txt
test-cmake-best-practice/in-seperate-buildsystems/math-functions/: CMakeLists.txt
test-cmake-best-practice/in-seperate-buildsystems/math-functions/cmake/: Dependencies.cmake
test-cmake-best-practice/in-seperate-buildsystems/math-functions/development/: CMakeLists.txt
test-cmake-best-practice/in-seperate-buildsystems/math-types/test/: CMakeLists.txt
test-conan/: README.md
test-conan/consuming-packages/: CMakeLists.txt  conanfile.py
test-conan/sample-package/: CMakeLists.txt  conanfile.py
test-conan/sample-package/development/: CMakeLists.txt
test-fmt/: CMakeLists.txt  conanfile.py
test-fmt/include/: hello.h
test-fmt/src/: hello.cpp
