## PROJECT SETTINGS ##
cmake_minimum_required(VERSION 3.15.0)
project(example_executable 
    VERSION 0.1.0
    LANGUAGES CXX
)

## CXX SETTINGS ##
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_DEBUG_POSTFIX -d)

## DEPENDENCIES CONFIGURATIONS ##
set(INSTALL_ROOT_DIR "C:/Program Files")
if(DEFINED ENV{INSTALL_ROOT_DIR})
    set(INSTALL_ROOT_DIR $ENV{INSTALL_ROOT_DIR})
endif()

set(MATH_FUNCTIONS_PACKAGE_NAME math_functions)
set(MATH_FUNCTIONS_PACKAGE_VERSION 0.1.0)
set(MATH_FUNCTIONS_PACKAGE_CONFIG_DIR ${INSTALL_ROOT_DIR}/${MATH_FUNCTIONS_PACKAGE_NAME}/${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_VERSION}/${CMAKE_BUILD_TYPE}/cmake)

message(${MATH_FUNCTIONS_PACKAGE_CONFIG_DIR})

list(APPEND CMAKE_PREFIX_PATH ${MATH_FUNCTIONS_PACKAGE_CONFIG_DIR})

find_package(${MATH_FUNCTIONS_PACKAGE_NAME} ${MATH_FUNCTIONS_PACKAGE_VERSION} REQUIRED CONFIG)

## BUILD CONFIGURATIONS ##
add_executable(example_executable main.cpp)

target_link_libraries(example_executable ${${MATH_FUNCTIONS_PACKAGE_NAME}_LIBRARIES})

